# micro_benchmarks

./: .clang-format  .gitignore  CMakeLists.txt  README.md
nvprof_metrics/: flops.cu
src/: main.cu  pointer_chaser.hpp
test/: test_pointer_chaser.cu
test/dev_sync/: dev_sync.cu
